<resources>
    <string name="app_name">Project5</string>
    <string name="translation_result">Translation</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="german">German</string>
    <string name="translationHeader">Translation</string>
    <string name="source_language">Source Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="translate_text_input">Write something...</string>
</resources>